fix: 🐛 fix dark mode

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,27 +5,25 @@
 @tailwind utilities;
 
 :root {
-  --cc-bg: #f5f5f5;
-  --c-text: #111827;
+  --cc-bg: #ffffff;
+  --cc-text: #111827;
 }
 
-[data-theme='dark'],
-html.dark {
-  --c-bg: #202023;
-  --c-text: rgba(255, 255, 255, 0.92);
+html.dark,
+.dark {
+  --cc-bg: #202023;
+  --cc-text: rgba(255, 255, 255, 0.92);
 }
 
-html,
-body {
-  color: var(--c-text);
-  background-color: var(--c-bg);
+html {
+  color: var(--cc-text);
+  background-color: var(--cc-bg);
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 0.15s;
 }
 
 body {
-  min-height: 100%;
   font-family: Quicksand, 'Noto Sans TC', -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica,
     Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
 }
